--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -13,51 +13,51 @@
             <span id="tagline">Git y Github</span>
         </div>
         <div id="post">
-            <h1>Alumn@: [Nombre Completo]</h1>
+            <h1>Alumn@: Jesus Munoz Romero</h1>
             <ol>
                 <li>
                     <h3>Que es un sistema de control de versiones?</h3>
-                    [Pon tu respuesta]
+                    Un sistema de control de versiones (VCS, por sus siglas en inglés, Version Control System) es una herramienta que ayuda a los equipos de desarrollo de software a gestionar los cambios en el código fuente a lo largo del tiempo. 
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    Git es un sistema de control de versiones distribuido. Permite a los desarrolladores rastrear y gestionar cambios en el código fuente a lo largo del tiempo mientras que GitHub es una plataforma de alojamiento de código basada en la web que utiliza Git para el control de versiones. Facilita la colaboración entre desarrolladores
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    git branch nombre
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    git clone nombre
                 </li>
                 <li>
                     <h3>Cómo puedo bajar los ultimos cambios de un repositorio?</h3>
-                    [Pon tu respuesta]
+                    git fech
                 </li>
                 <li>
                     <h3>Cómo puedo gener un tag?</h3>
-                    [Pon tu respuesta]
+                    git tag nombre
                 </li>
                 <li>
                     <h3>Cómo hago una mezcla de ramas?</h3>
-                    [Pon tu respuesta]
+                    git merch rama
                 </li>
                 <li>
                     <h3>Cómo puedo moverme a un commit especifico?</h3>
-                    [Pon tu respuesta]
+                    git revert
                 </li>
                 <li>
                     <h3>Cómo puedo borrar una rama?</h3>
-                    [Pon tu respuesta]
+                    git branch -d nombre
                 </li>
                 <li>
                     <h3>Cómo puedo borrar un tag?</h3>
-                    [Pon tu respuesta]
+                  	git tag -d nombre
                 </li>
                 <li>
                     <h3>Cómo puedo ver los cambios que estan por enviarse al repositorio?</h3>
-                    [Pon tu respuesta]
+                    git status
                 </li>
                 <li>
                     <h3>Para que sirve el comando <em>git remote -v?</em></h3>
@@ -65,15 +65,16 @@
                 </li>
                 <li>
                     <h3>Cómo le digo a git cual es mi email y correo?</h3>
-                    [Pon tu respuesta]
+                    git config --global user.name "Tu Nombre"
+		    git config --global user.email "tuemail@example.com"
                 </li>
                 <li>
                     <h3>Cuales son los pasos para conectar git con github?</h3>
-                    [Pon tu respuesta]
+                    En GitLab, haz clic en el icono más del menú superior y ve a Nuevo proyecto/repositorio > Importar proyecto > Repositorio por URL. Pega la URL del repositorio de Kinsta en el campo URL del repositorio Git, introduce un Nombre de proyecto y haz clic en Crear proyecto
                 </li>
                 <li>
-                    <h3>Cómo puedo crear un alias en git?</h3>
-                    [Pon tu respuesta]
+                  <h3>Cómo puedo crear un alias en git?</h3>
+                    git config --global alias.tree "log --graph --decorate --all --oneline"
                 </li>
             </ol>
         </div>
